[package]
name = "predict"
version = "0.1.0"
authors = ["steven.t.homer@gmail.com <steven.t.homer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# General
num = "0.2.0"
ndarray = "0.12.1"
rand = "0.7.2"
itertools = "0.8.1"
approx = "0.3.2"

# IO and Visualization
hound = "3.4.0"
serde = "1.0.103"
serde_json = "1.0.42"
plotters = "0.2.11"

# Command-line
structopt = "0.3.5"
indicatif = "0.13.0"
log = "0.4.8"
ctrlc = "3.1.3"
confy = "0.3.1"
exitcode = "1.1.2"